feat: update category and logos

--- a/project/resources/lang/dadmin.json
+++ b/project/resources/lang/dadmin.json
@@ -534,6 +534,7 @@
     "Password":"Password",
     "Enter Password":"Enter Password",
     "Select Role":"Select Role",
+    "Select Directory": "Select Directory",
     "Edit Staff":"Edit Staff",
     "Edit Staff Form":"Edit Staff Form",
     "Role":"Role",
