fix: change listing to restaurant

--- a/project/resources/lang/default.json
+++ b/project/resources/lang/default.json
@@ -9,8 +9,8 @@
     "Search":"Search",
     "Popular Categories":"Popular Categories",
     "Browse Top Categories":"Browse Top Categories",
-    "Listings":"Listings",
-    "Featured Listings":"Featured Listings",
+    "Restaurants":"Restaurants",
+    "Featured Restaurants":"Featured Restaurants",
     "Rego in Los Angeles":"Rego in Los Angeles",
     "Restaurant":"Restaurant",
     "Hotel":"Hotel",
@@ -117,8 +117,8 @@
     "Latest News":"Latest News",
     "Pickup New Updates":"Pickup New Updates",
     "Book Now":"Book Now",
-    "Active Listings":"Active Listings",
-    "Views Listing":"Views Listing",
+    "Active Restaurants":"Active Restaurants",
+    "Views Restaurant":"Views Restaurant",
     "Total Reviews":"Total Reviews",
     "Total Bookings":"Total Bookings",
     "Followers":"Followers",
@@ -156,9 +156,9 @@
     "Old Password":"Old Password",
     "New Password":"New Password",
     "Save Changes":"Save Changes",
-    "Listings Analytics":"Listings Analytics",
-    "Manage Listings":"Manage Listings",
-    "Listing Statistics":"Listing Statistics",
+    "Restaurants Analytics":"Restaurants Analytics",
+    "Manage Restaurants":"Manage Restaurants",
+    "Restaurant Statistics":"Restaurant Statistics",
     "Total views":"Total views",
     "Analytics Details":"Analytics Details",
     "Device":"Device",
@@ -167,7 +167,7 @@
     "Visited At":"Visited At",
     "Customer Enquiry":"Customer Enquiry",
     "All Enquiries":"All Enquiries",
-    "Listing Item":"Listing Item",
+    "Restaurant Item":"Restaurant Item",
     "Mail":"Mail",
     "Message":"Message",
     "Delete":"Delete",
@@ -191,12 +191,12 @@
     "Enter Subject":"Enter Subject",
     "Close":"Close",
     "Send":"Send",
-    "Add Listing":"Add Listing",
+    "Add Restaurant":"Add Restaurant",
     "Real Estate":"Real Estate",
-    "Saved Listings":"Saved Listings",
+    "Saved Restaurants":"Saved Restaurants",
     "View":"View",
     "Edit":"Edit",
-    "Create Listing":"Create Listing",
+    "Create Restaurant":"Create Restaurant",
     "Basic":"Basic",
     "Amenities":"Amenities",
     "Media":"Media",
@@ -208,9 +208,9 @@
     "Info":"Info",
     "Specifications":"Specifications",
     "FAQ":"FAQ",
-    "Listing Info":"Listing Info",
-    "Listing Tile":"Listing Tile",
-    "Listing Slug":"Listing Slug",
+    "Restaurant Info":"Restaurant Info",
+    "Restaurant Tile":"Restaurant Tile",
+    "Restaurant Slug":"Restaurant Slug",
     "Please select a category":"Please select a category",
     "Please select a location":"Please select a location",
     "Real address":"Real address",
@@ -221,12 +221,12 @@
     "Longitude":"Longitude",
     "Description":"Description",
     "Amenties Options":"Amenties Options",
-    "Listing Video Provider":"Listing Video Provider",
+    "Restaurant Video Provider":"Restaurant Video Provider",
     "Youtube":"Youtube",
     "Vimeo":"Vimeo",
     "Html5":"Html5",
-    "Listing Video Url":"Listing Video Url",
-    "Listing Thumbnail":"Listing Thumbnail",
+    "Restaurant Video Url":"Restaurant Video Url",
+    "Restaurant Thumbnail":"Restaurant Thumbnail",
     "Upload Picture":"Upload Picture",
     "Set Gallery":"Set Gallery",
     "Working Hours":"Working Hours",
@@ -269,8 +269,8 @@
     "Enter Duration":"Enter Duration",
     "FAQ Items":"FAQ Items",
     "Name":"Name",
-    "Edit Listing":"Edit Listing",
-    "Listing":"Listing",
+    "Edit Restaurant":"Edit Restaurant",
+    "Restaurant":"Restaurant",
     "Messages":"Messages",
     "Select a service":"Select a service",
     "Write note":"Write note",
