fix: feature listing tabs error

--- a/project/resources/lang/default.json
+++ b/project/resources/lang/default.json
@@ -12,6 +12,7 @@
     "Listings":"Listings",
     "Featured Listings":"Featured Listings",
     "Rego in Los Angeles":"Rego in Los Angeles",
+    "Bar":"Bar",
     "Restaurant":"Restaurant",
     "Hotel":"Hotel",
     "Beauty":"Beauty",
